Attempt to fix aspect ratio on iOS

--- a/style.css
+++ b/style.css
@@ -2,27 +2,33 @@
     background-color: lightGray;
     border-radius: 25px;
     font-weight: bold;
-    height: 115px;
+    height: 22vw;
+	max-height: 115px;
+	max-width: 115px;
     padding-left: 1%;
     padding-right: 1%;
 	vertical-align: top;
-    width: 115px;
+    width: 22vw;
 }
 
 .selected {
     background-color: lightBlue;
-    height: 110px;
-    width: 110px;
+    height: 21vw;
+	max-height: 110px;
+	max-width: 110px;
+	width: 21vw;
 }
 
 .row {
     border-radius: 25px;
-    height: 125px;
+    height: 25vw;
     margin-top: 2%;
+	max-height: 115px;
+	max-width: 460px;
     padding-left: 1%;
     padding-right: 1%;
     text-align: center;
-    width: 450px;
+    width: 88vw;
 }
 
 #popup {
